# ai-spacex-data-analysis

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json  settings.local.json
app/: streamlit_app.py
data/: README.md
data/processed/: spacex_launches.csv
models/: best_model.joblib  best_model.meta.json  metrics.json
notebooks/: eda.ipynb
scripts/: generate_dataset.py  run_ingestion.py  run_training.py
src/launch_success/: config.py  exceptions.py  pipeline.py
src/launch_success/data/: ingestion.py  loader.py  schemas.py  spacex_client.py  synthetic.py
src/launch_success/evaluation/: metrics.py  plots.py
src/launch_success/features/: cleaning.py  engineering.py
src/launch_success/interpretability/: shap_analysis.py
src/launch_success/models/: persistence.py  registry.py  trainer.py
tests/: conftest.py  test_cleaning.py  test_config.py  test_config_extended.py  test_edge_cases.py  test_engineering.py  test_exceptions.py  test_ingestion.py  test_ingestion_extended.py  test_integration.py  test_loader.py  test_metrics.py  test_persistence.py  test_persistence_extended.py  test_pipeline.py  test_plots.py  test_plots_extended.py  test_registry.py  test_shap.py  test_spacex_client.py  test_spacex_client_extended.py  test_synthetic.py  test_trainer.py
